test/tests/compiler/1_int_constants/invalid_parse/extra_junk.plx
pub main(none) i32 {
    return 2
}
# A single identifier outside of a declaration isn't a valid top-level construct
foo
